argocd/manifests/car-telemetry/base/middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: car-telemetry
spec:
  redirectScheme:
    scheme: https
    permanent: true
