argocd/manifests/car-telemetry/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: car-telemetry
  labels:
    app.kubernetes.io/name: car-telemetry
    app.kubernetes.io/managed-by: argocd
