argocd/manifests/car-telemetry/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-telemetry
  namespace: car-telemetry
  labels:
    app: car-telemetry
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: car-telemetry
  template:
    metadata:
      labels:
        app: car-telemetry
    spec:
      imagePullSecrets:
        - name: car-telemetry-ghcr
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: car-telemetry
          image: ghcr.io/jlevangi/car-telemetry:git-6324fa9e2eea503cea50ee6714a450bf41564318
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: car-telemetry-data
