argocd/manifests/car-telemetry/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-telemetry
  namespace: car-telemetry
  labels:
    app: car-telemetry
spec:
  type: ClusterIP
  selector:
    app: car-telemetry
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
